# gpg

./: .gitignore  CMakeLists.txt  Makefile  README.md  environment.yml  run  rund  runexp.py  runv  swiggit  temp.txt  toread.txt  try.py
dataset/: diabetes_dev.csv  diabetes_test.csv  diabetes_train.csv
src/: cmdparser.hpp  complexity.hpp  evolution.hpp  feature_selection.hpp  fitness.hpp  fos.hpp  globals.hpp  ims.hpp  individual.hpp  main.cpp  myeig.hpp  nicknames.hpp  node.hpp  operator.hpp  python_interface.cpp  rng.hpp  selection.hpp  tests.hpp  util.hpp  variation.hpp  xoshiro.hpp
src/pypkg/: setup.py
src/pypkg/pygpg/: complexity.py  finetuning.py  imputing.py  sk.py
src/swig/python/: pyface.cxx  pyface.hpp  pyface.i  setup.py  setup.py.backup
src/swig/python/pygpg/: complexity.py  conversion.py  finetuning.py  sk.py
src/swig/python/pyminigpg/: sk.py
